# thunkling

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  fourmolu.yaml  thunkling.cabal  untitled-functional-language.cabal
.github/workflows/: build.yml
app/: Main.hs
src/Language/: Thunkling.hs
src/Language/Thunkling/: Config.hs  Driver.hs  Errors.hs  Parser.hs  Pretty.hs  Syntax.hs  Typecheck.hs
test/data/: addition.thl  hello.thl  typecheck.thl
