cabal-version: 3.4
name: thunkling
version: 0.1.0.0
synopsis: A minimal lazy functional programming language
homepage: https://github.com/sgillespie/thunkling
license: MIT
license-file: LICENSE
author: Sean D Gillespie
maintainer: sean@mistersg.net
copyright: 2025 Sean Gillespie
category: Development
build-type: Simple
extra-doc-files: CHANGELOG.md

common all
  ghc-options:
    -Wall
    -Werror

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude,

  build-depends:
    base ^>=4.18.2.1,
    relude,

  default-extensions:
    DataKinds
    DerivingStrategies
    OverloadedStrings
    RecordWildCards
    TypeFamilies

library
  import: all
  exposed-modules:
    Language.Thunkling
    Language.Thunkling.Config
    Language.Thunkling.Driver
    Language.Thunkling.Errors
    Language.Thunkling.Parser
    Language.Thunkling.Syntax
    Language.Thunkling.Typecheck

  build-depends:
    bytestring,
    containers,
    megaparsec,
    mtl,
    parser-combinators,

  hs-source-dirs: src
  default-language: GHC2021

executable thlc
  import: all
  main-is: Main.hs
  build-depends:
    optparse-applicative,
    thunkling,

  hs-source-dirs: app
  default-language: GHC2021

test-suite test
  import: all
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    thunkling
