cabal-version: 3.4
name: untitled-functional-language
version: 0.1.0.0
synopsis: A minimal lazy functional programming language
homepage: https://github.com/sgillespie/untitled-functional-language
license: MIT
license-file: LICENSE
author: Sean D Gillespie
maintainer: sean@mistersg.net
copyright: 2025 Sean Gillespie
category: Development
build-type: Simple
extra-doc-files: CHANGELOG.md

common all
  ghc-options: 
    -Wall 
    -Werror
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude
  build-depends:
    base ^>= 4.18.2.1,
    relude,
  default-extensions:
    DerivingStrategies

library
  import: all
  exposed-modules: MyLib
  build-depends: 
    megaparsec,
  hs-source-dirs: src
  default-language: GHC2021

executable untitledc
  import: all
  main-is: Main.hs
  build-depends:
    untitled-functional-language,
    optparse-applicative,

  hs-source-dirs: app
  default-language: GHC2021

test-suite test
  import: all
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    untitled-functional-language,
